...

  AuthFormBloc({
    required this.userRepository,
    required this.authCubit,
    required this.networkService,
  }) : super(AuthFormState.initial(
          emailOrPhone: EmailAddress(value: ''),
          phone: PhoneNumber(value: ''),
          password: Password(value: ''),
          showPassword: false,
          validationMode: AutovalidateMode.disabled,
          hasError: false,
          failureMessage: '',
          authRequestFinished: false,
          isPhoneNumber: false,
...
