...
                  isPasswordVisible: state.showPassword,
                ),
                SizedBox(
                  height: 0.05 * height,
                ),
                AnimatedButton(
                  key: Key('animatedButton_SignIn'),
                  formKey: widget.formKey,
                  width: 0.4 * width,
                  height: 0.055 * height,
                  backgroundColor: darkAccentColor,
                  endColor: backgroundColor,
                  shadowColor: mBlack,
...
