...
      alignment: Alignment.center,
      child: Theme(
        data: ThemeData(primaryColor: whiteColor),
        child: Form(
          key: formKey,
          child: TextFormField(
            key: Key('nameField'),
            validator: (input) {
              Name name = Name(value: input!);
              if (!name.isValid()) {
                return 'Your name is incorrect';
              }
              return null;
...
