...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
        key: Key('signUpButton'),
        onTap: () {
          if (!widget.isButtonClicked) {
            if (widget.formKey.currentState!.validate()) {
              widget.onTap();
              _buttonController.forward()
                ..whenComplete(
...
